--- a/Gradle/gradle-multi-project/app/build.gradle
+++ b/Gradle/gradle-multi-project/app/build.gradle
@@ -13,9 +13,10 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
-apply plugin: 'java'
-apply plugin: 'application'
+plugin {
+    id 'java'
+    id 'application'
+}
 
 dependencies {
     implementation project(':utils')
