--- a/Gradle/gradle-multi-project/core/build.gradle
+++ b/Gradle/gradle-multi-project/core/build.gradle
@@ -14,7 +14,9 @@
  * limitations under the License.
  */
 
-apply plugin: 'java-library'
+plugin {
+    id 'java-library'
+}
 
 dependencies {
     implementation 'joda-time:joda-time:2.9.7'
