--- a/Gradle/gradle-multi-project/utils/build.gradle
+++ b/Gradle/gradle-multi-project/utils/build.gradle
@@ -13,8 +13,9 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
-apply plugin: 'java-library'
+plugin {
+    id 'java-library'
+}
 
 dependencies {
     api project(':core')
