--- a/Gradle/gradle-multi-project/core/build.gradle
+++ b/Gradle/gradle-multi-project/core/build.gradle
@@ -13,10 +13,11 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
-plugin {
+plugins {
     id 'java-library'
 }
+
+ext.arctic = false
 
 dependencies {
     implementation 'joda-time:joda-time:2.9.7'
